--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Git, Github and Markdown"
-subtitle: "Trinity for Economists"
+subtitle: "Three Tools for Economists"
 author: "[Junsok Huhh](https://github.com/anarinsk/lec_git-github-markdown/)"
 date: "2022-07-29"
 format: 
@@ -25,9 +25,9 @@ format:
 
 - [깃](https://gitforwindows.org/)을 설치했다. 
   - 맥을 쓰시면 별로도 설치하지 않아도 됩니다... 
-- [깃허브](https://github.com/) 계정은 생성해 두었다. 
+- [깃허브](https://github.com/) 계정을 생성해 두었다. 
 - [깃허브 데스크탑](https://desktop.github.com/)을 설치했다. 
-- [VS Code](https://code.visualstudio.com/) 설치했다. 
+- [VS Code](https://code.visualstudio.com/)를 설치했다. 
 - [Quarto](https://quarto.org/)를 설치했다. 
 
 :::
@@ -81,7 +81,7 @@ format:
 ::: {.nonincremental}
 - Git은 리눅스의 개발 과정에서 탄생했다. 
   - Open Source의 특성상 개발 이력 관리가 필요 
-  - 이른바 VCS를 의도하지 않게 혁신 
+  - 이른바 VCS를 (의도하지 않게) 혁신 
 - VCS란? 
   - Version Control System 
   - Git이 없었다면 리눅스도 없었다! 
@@ -93,36 +93,39 @@ format:
 
 ::::
 
-## Git이란{background-color="black" background-image="https://git-scm.com/images/logos/downloads/Git-Logo-White.png" background-size="cover" background-repeat="center" background-opacity="0.2" class="center"}
+## Git이란?
 
 :::{.nonincremental}
 - 한마디로 말하면 VCS이다. 
-  - Version Control System 
 - 누가 무엇을 언제 바꾸었는지를 일목요연하게 기록한다. 
-- 필요한 시점으로 언제든 돌아갈 수 있다. 
+- 필요한 시점으로 언제든 돌아갈 수 있다(백업). 
 :::
 
-## 잠깐! 
+## 잠깐! {.smaller}
 
 :::{.nonincremental}
-- 우리는 지금 git을 본격적으로 배우는 것이 아니다! 
-  - 따라서 앞으로 1인 사용자만을 가정한다. 
+- 우리는 지금 git을 본격적으로 배우는 것이 아니다... 
+  - 따라서 이 특강에서는 1인 사용자만을 가정
 - 1인일 때도 쓸모가 있을까? 
   - 나는 어제 뭐했는지도 정확하게 기억하지 못한다... 
-  - git을 쓰면 나의 이런 멍청함이 보완된다! 
+  - Git + Github는 나의 어리석음을 보완해준다. 
 - 웹하드와 유사한 것일까?  
-  - 단 일반적인 용도의 웹하드와 다르다! 
-  - 코드/문서를 관리하고 정리하는 용도
-  - 기기 간 이동 작업에 편리 
+  - Half Yes; 파일을 저장
+  - Half No; 대용량 파일 저장 불가 
+- 코드/문서를 관리하고 정리하는 용도
+  - 1인 이용시, 기기 간 이동 작업에 편리 
+  - 협업 시, 버전 관리의 자동화 
+- Github의 경우 
+  - 뒤에서 보겠지만, 개발자/연구자에게 유용한 부가 기능 제공 
 :::
 
-# Basic Concept of Git
+# Basics of Git{background-color="black" background-image="https://git-scm.com/images/logos/downloads/Git-Logo-White.png" background-size="cover" background-repeat="center" background-opacity="0.2" class="center"}
 
 ## Add, Commit, Push, Pull
 
-![](https://velog.velcdn.com/images/chlwnstjr94/post/a9e014c5-97c7-473a-aa3e-dcc3bd4e99e5/image.PNG){.absolute top=120 left=80 width=900 height=550}
+![](https://velog.velcdn.com/images/chlwnstjr94/post/a9e014c5-97c7-473a-aa3e-dcc3bd4e99e5/image.PNG){.absolute top=120 left=80 width=800 height=550}
 
-## 여러분의 버전 관리는 아마도...
+## 여러분의 버전 관리는 아마도...?
 
 <br>
 
@@ -139,11 +142,22 @@ format:
 
 ![](./images/git-add-commit.png){.absolute top=150 left=100 width=900 height=500 style="background:#FFFFFF;"}
 
+## Add & Commit 
+
+- `Working Directory` 
+  - 무슨 일이든 해도 좋다! 
+
+- `Staging Area`
+  - 저장이 필요한 수정/추가된 파일의 목록을 만들어 둔다. 
+
+- `Commit` 
+  - Staging Area의 내용을 모아서 스냅샷을 만든다. 
+
 ## 연습: 준비물 
 
 :::{.nonincremental}
 - Git (for Windows)
-- Github Desktop (계정 만들어 둘 것)
+- Github Desktop (계정 만들어 두셨쥬?)
 :::
 
 ## Git 폴더 만들기 
@@ -160,11 +174,11 @@ format:
 ## Github Desktop
 
 ::: {.r-stack}
-![](./images/github-desktop_1.png){.fragment width="900" height="600"}
+![](./images/github-desktop_1.png){.fragment width="850" height="550"}
 
-![](./images/github-desktop_2.png){.fragment width="900" height="600"}
+![](./images/github-desktop_2.png){.fragment width="850" height="550"}
 
-![](./images/github-desktop_3.png){.fragment width="900" height="600"}
+![](./images/github-desktop_3.png){.fragment width="850" height="550"}
 :::
 
 
@@ -180,6 +194,10 @@ format:
 
 :::
 
+## 두려워 마세요! {background-color="black" background-image="https://c.tenor.com/_Vjz-KB-sj4AAAAC/lego-panic.gif" background-size="contain" background-repeat="center" background-opacity="0.3" class="center"}
+
+"그냥 파일 시스템일 뿐입니다. 복붙에서 저장해 두면 되요."
+
 ## 깃 (더) 배우기 
 
 :::{.nonincremental}
@@ -190,7 +208,7 @@ format:
 
 ## Branch 
 
-![](./images/branch-example.png){.absolute top=100 left=100 width=800 height=550 style="background:#FFFFFF;"}
+![](https://www.nobledesktop.com/image/gitresources/git-branches-merge.png){.absolute top=100 left=100 width=800 height=500 style="background:#FFFFFF;"}
 
 ## Git과 Github의 역할  
 
@@ -201,34 +219,38 @@ format:
 
 # {background-color="white" background-image="https://miro.medium.com/max/4000/1*J8O2xd9ZqxWr2x6EP4MHmg.png" background-size="contain" background-repeat="center" background-opacity="1" class="center"}
 
-## Github는 원격 저장소 
+## Github는 원격 저장소 {.smaller}
 
 ::: { .nonincremental }
 <https://github.com>
 
 - 작업한 내용을 온라인을 통해 동기화 
-  - 원격 저장소 
-- 서로 다른 기기로 작업할 때 유용 
-  - PC1 작업 &rarr; Git Push  &rarr; PC2 Git Pull  &rarr; 작업 &rarr; Git Push  &rarr;  $\cdots$
-- 여러 명이 협업할 때도 유용 
-  - Branch 그리고 Pull Request의 개념이 필요하다. 
+  - 일종의 원격 저장소 
+- 1인용; 서로 다른 기기로 작업할 때 유용 
+  - PC 1 작업 &rarr; Git Push  &rarr; PC2 Git Pull  &rarr; 작업 &rarr; Git Push  &rarr;  PC 3 GIt Pull &rarr; $\cdots$
+- 다인용; 프로젝트의 일관성 유지 및 관리  
+  - Branch, Pull Request, Fork 등의 개념이 필요 
+  - 익숙하지 않을 뿐 그렇게 어려운 개념은 아닙니다. 
+- 2018년 마이크로소프트에서 인수 
+  - 개인 및 소규모 개발사의 기본적인 기능은 무료 
 :::
 
 ## {background-color="black" background-image="./images/Git-PUSH-pULL-1280x640.png" background-size="contain" background-repeat="none" background-opacity="1" transition="none" background-transition="zoom" transition-speed="slow"}
 
-## Other Things 
+## Other Services in Github
 
 :::{.nonincremental}
-- Static Web Hosting 
+- Github Pages 
+  - Static Web Hosting 
 - Github Actions 
+  - Automation service 
 - Github Copilot 
+  - Code completion assisted by AI(GPT-3)
 <br>
 $\vdots$
 :::
 
 ## {background-color="black" background-image="./images/git_procedure_V2.png" background-size="contain" background-repeat="none" background-opacity="1" transition="none" background-transition="zoom" transition-speed="slow"}
-
-
 
 # Markdown 
 
@@ -247,11 +269,15 @@ $\vdots$
 ## 마크다운 기본 문법 
 
 :::{.nonincremental}
+
+:::{.callout-tip}
 [기본 문법](https://quarto.org/docs/authoring/markdown-basics.html)
+:::
 
 - 모든 마크다운 문법이 동일하지는 않다. 
-  - Github-flavored markdown, Kramdown 등등 
+  - [Github-flavored markdown](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax), Kramdown 등등 
 - 기본 문법은 동일하니 기본적인 부분을 파악해두면 된다. 
+  - 서비스 별로 특화된 부분은 개별적으로 활용하면 됨 
 :::
 
 ## 연습: 준비물 
@@ -288,6 +314,31 @@ $\vdots$
 
 :::
 
+## Pros & Cons
+
+:::: {.columns}
+
+::: {.column width="50%"}
+::: {.nonincremental}
+- 장점 
+  - 플랫폼 종속성 최소화 
+  - 깔끔하게 공간을 꾸밀 수 있다. 
+  - $\rm \LaTeX$ 친화적 
+  - (암묵적) 비용이 들지 않는다. 
+:::
+:::
+::: {.column width="50%"}
+::: {.nonincremental}
+- 단점 
+  - WYSIWYM을 활용할 수 있다.  
+  - 진입 장벽 
+  - 디자인 요소가 부족하다. 
+  - 전달/전파가 용이하다. 
+:::
+:::
+
+::::
+
 ## {background-color="white" background-image="./images/github-pages-workflow.png" background-size="contain" background-repeat="center" background-opacity="1" class="center"}
 
 ## 무엇을 할 수 있나? 
@@ -302,9 +353,9 @@ $\vdots$
 ## 연습: 준비물
 
 :::{.nonincremental}
-- Quarto 
-- VS Code 
-  -Quarto Extension 
+- `Quarto` 
+- `VS Code` 
+  - Quarto Extension 
 :::
 
 
