--- a/index.qmd
+++ b/index.qmd
@@ -196,7 +196,7 @@ format:
 
 ## 두려워 마세요! {background-color="black" background-image="https://c.tenor.com/_Vjz-KB-sj4AAAAC/lego-panic.gif" background-size="contain" background-repeat="center" background-opacity="0.3" class="center"}
 
-"그냥 파일 시스템일 뿐입니다. 복붙에서 저장해 두면 되요."
+"그냥 파일 시스템일 뿐입니다. 복붙해서 저장해 두면 되요."
 
 ## 깃 (더) 배우기 
 
