--- a/index.qmd
+++ b/index.qmd
@@ -32,9 +32,9 @@ format:
 
 :::
 
-## 목적과 동기의 호응 {background-color="black" background-image="https://25.media.tumblr.com/fc175d258e3109a3fa0a038ef4e577a4/tumblr_mj8tdt5Qxn1rmhlw7o1_r1_500.gif" background-size="cover" background-repeat="center" background-opacity="0.5" class="center"}
+## 목적과 동기의 호응 {background-color="black" background-image="https://i.gifer.com/4APT.gif" background-size="cover" background-repeat="center" background-opacity="0.3" class="center"}
 
-"서로 뭘 하는지 목적을 맞춰야 뭐 하나라도 건질 수 있겠죠?"
+"서로 뭘 하려는지 목적을 맞춰야 뭐 라도 건질 수 있겠죠?"
 
 ## 오늘 튜토리얼을 하는 이유 
 
