--- a/index.qmd
+++ b/index.qmd
@@ -333,10 +333,10 @@ $\vdots$
 ::: {.column width="50%"}
 ::: {.nonincremental}
 - 단점 
-  - WYSIWYM을 활용할 수 있다.  
+  - 어쨌든 WYSIWYM은 아니다.
   - 진입 장벽 
   - 디자인 요소가 부족하다. 
-  - 전달/전파가 용이하다. 
+  - 전달/전파에 품이 든다. 
 :::
 :::
 
