--- a/index.qmd
+++ b/index.qmd
@@ -164,9 +164,10 @@ format:
 
 :::{.nonincremental}
 
-- Git 폴더를 만드는 방법은 세 가지가 있습니다. 
+- Git 폴더를 만드는 방법은 두 가지가 있습니다. 
 
   1. 애초부터 Git 폴더로 생성하기 
+      - Github Desktop 앱을 이용하거나 혹은 터미널을 쓰거나 
   2. Github에서 Clone 해오기 
 
 :::
